--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Naivedya-SGSITS -1 </title>
+      <title>Naivedya Home</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
       <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -193,6 +193,6 @@
     <!-- ---------------------------------------------------------- Footer ----------------------------------------------  -->
     <div id="footer"></div>
     <!-- ---------------------------------------------------------------- Script -------------------------------------------------- -->
-   
+    <script src="script.js"></script>
     </body>
     </html>
